# python-template

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pull-request.yaml  python.yml
